Few changes to go to branch "review"

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 			</div>
 			<div class="gray_banner"></div>
 			<div class="left_column">
-				<ul>
-					<li>Suspendisse</li>
-					<li>Augue</li>
-					<li>Lorem ipsum</li>
-					<li>Morbi</li>
-					<li>Integer</li>
-					<li>Donec</li>
-					<li>Curabitur</li>
-					<li>Vestibulum</li>
-					<li>a tirpis</li>
-					<li>Aliquam</li>
-					<li>Praesent</li>
-					<li>Duis</li>
-					<li>Mauris</li>
+				<ul class="list">
+					<li class="list_item">Suspendisse</li>
+					<li class="list_item">Augue</li>
+					<li class="list_item">Lorem ipsum</li>
+					<li class="list_item">Morbi</li>
+					<li class="list_item">Integer</li>
+					<li class="list_item">Donec</li>
+					<li class="list_item">Curabitur</li>
+					<li class="list_item">Vestibulum</li>
+					<li class="list_item">a tirpis</li>
+					<li class="list_item">Aliquam</li>
+					<li class="list_item">Praesent</li>
+					<li class="list_item">Duis</li>
+					<li class="list_item">Mauris</li>
 				</ul>>
 			</div>
 		</div>
