Added normalizer.css, HELP NEEDED to figure out how to work with percentages!

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="styles/normalizer.css">
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
 	</head>
 
 	<body>
 		<div class="page">
 			<div class="top_background">
+				<div class="menu"></div>
 				<div class="banner"></div>
-				<div class="logo"></div>
+				<div class="logo_cont"> <!-- div made to store logo, called logo container -->
+					<img class="logo" src="images/jasmine_logo.jpeg">
+				</div>
 			</div>
-			<div class="gray_banner"></div>
 			<div class="left_column">
 				<ul class="list">
 					<li class="list_item">Suspendisse</li>
